examples/errors/parsing/mergesort-lowercase-sort-name.cn
sort list(a) = { Nil : () | Cons : (a * list(a)) }

main : () [impure] = ()
